packages/cli/src/__tests__/fixtures/multi-schema-files/invalid/multiple-errors/prisma/schema/User.prisma
model User {
    id Int

    blogs Blog[]
}
